--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 <h3>Welcome!</h3><br>
 <h5>Site School 77</h5>
 <img class="glav" src="https://i.postimg.cc/nzJk0bct/1-FC38-ECF-FFE1-40-A3-97-E5-AE00-FB073599.jpg">
-<a href="signup.html">
-<button class="vote">Vote</button>
-</a>
+<button class="vote"><a href="signup.html">Vote</a></button>
 </center>
 <img class="plane" src="https://i.postimg.cc/GpwnnSBw/ADAEAE45-3-E74-47-C5-B698-C08496-FD6-BDB.png">
 <img class="book" src="https://i.postimg.cc/NfHKfykp/00-EE8-AD8-E8-E0-4-B88-AB75-278-B0576-C6-E2.png">
@@ -77,7 +75,6 @@
     margin-top: -80vw;
     position: absolute;
     font-family: Geologica;
-    cursor: pointer;
     color: white;
     font-size: 4vw;
   }
