--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
     <input style="margin-top: 2vw;" type="email" value="" id="email" placeholder="Email" required><br>
     <input style="margin-top: 2vw;" type="password" value="" id="password" placeholder="Password" required><br>
     <button class="SignUp" id="submit"><p class="sig">Sign Up</p></button><br>
-    <a style="color: white" href="signin.html">
+    <a href="signin.html">
     <p class="signin">Sign In</p>
     </a>
 </div>
