--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <h3>Welcome!</h3><br>
 <h5>Site School 77</h5>
 <img class="glav" src="https://i.postimg.cc/nzJk0bct/1-FC38-ECF-FFE1-40-A3-97-E5-AE00-FB073599.jpg">
-<a href="signup.html">
+<a style="color: white" href="signup.html">
 <button class="vote">Vote</button>
 </a>
 </center>
